part3/3.09_pingpong-main_limits/main-app/manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: main-ping-connected
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pingpongconnected
  template:
    metadata:
      labels:
        app: pingpongconnected
    spec:
      containers:
        - name: main-image-connecting
          image: georgemihail/main-app-gke:latest
          resources:
            limits:
              cpu: "400m"
              memory: "128Mi"
