part3/3.09_pingpong-main_limits/main-app/manifest/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: main-app-svc
spec:
  type: NodePort
  selector:
    app: pingpongconnected
  ports:
    - port: 6789
      protocol: TCP
      targetPort: 3002
